Update Everything for MC 1.20.6